emercify on click

--- a/app/src/main/res/layout/layout_top_tabs.xml
+++ b/app/src/main/res/layout/layout_top_tabs.xml
@@ -23,12 +23,11 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/emercifytext1"
                     android:id="@+id/emercify_text"
+                    android:onClick="onButtonClick"
                     android:layout_centerHorizontal="true"/>
 
 
             </RelativeLayout>
-
-
         </android.support.v7.widget.Toolbar>
 
         <!--</android.support.design.widget.AppBarLayout>-->
