--- a/app/src/main/res/layout/dialog_post.xml
+++ b/app/src/main/res/layout/dialog_post.xml
@@ -46,12 +46,12 @@
                     android:layout_below="@+id/kindofpost"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="22dp"
                     android:layout_marginTop="5dp"
                     android:layout_centerVertical="true"
                     android:layout_toStartOf="@+id/normal_post"
                     android:layout_marginRight="0dp"
-                    android:src="@mipmap/ic_normalpost"/>
+                    android:src="@drawable/ic_normalpost1"/>
 
                 <TextView
                     android:id="@+id/normal_post"
@@ -73,7 +73,7 @@
                     android:layout_width="15dp"
                     android:layout_height="15dp"
                     android:layout_toStartOf="@id/emergency_post"
-                    android:src="@mipmap/ic_emerdialog"/>
+                    android:src="@drawable/ic_emerdialog1"/>
 
                 <TextView
                     android:id="@+id/emergency_post"
