Legit and Fake Buttons

--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -123,6 +123,36 @@
                     android:layout_marginRight="10dp"
                     android:visibility="gone"/>
 
+                <Button
+                    android:id="@+id/fakeButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:fontFamily="sans-serif-condensed"
+                    android:text="FAKE"
+                    android:textSize="18sp"
+                    android:background="@drawable/rounded_border_blue"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    style="@style/com_facebook_button"
+                    android:layout_marginRight="10dp"
+                    android:visibility="gone"/>
+
+                <Button
+                    android:id="@+id/legitButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:fontFamily="sans-serif-condensed"
+                    android:text="LEGIT"
+                    android:textSize="18sp"
+                    android:background="@drawable/rounded_border_blue"
+                    android:layout_toLeftOf="@+id/fakeButton"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    style="@style/com_facebook_button"
+                    android:layout_marginRight="10dp"
+                    android:visibility="gone"/>
+
             </RelativeLayout>
 
             <RelativeLayout
