--- a/app/src/main/res/layout/layout_mainfeed_listitem.xml
+++ b/app/src/main/res/layout/layout_mainfeed_listitem.xml
@@ -82,7 +82,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:src="@mipmap/emergency_icon"/>
+                android:src="@mipmap/emergency_icon"
+                android:visibility="gone"/>
 
         </RelativeLayout>
 
@@ -144,13 +145,11 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textSize="14sp"
-                android:text="Liked by"
                 android:id="@+id/image_likes"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Caption"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:id="@+id/image_caption"
@@ -161,7 +160,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Comments"
                 android:textColor="@color/grey"
                 android:textSize="14sp"
                 android:id="@+id/image_comments_Link"
@@ -171,7 +169,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Time Posted"
                 android:textColor="@color/grey"
                 android:textSize="14sp"
                 android:id="@+id/image_time_posted"
