--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -78,7 +78,8 @@
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
-                    android:src="@mipmap/emergency_icon"/>
+                    android:src="@mipmap/emergency_icon"
+                    android:visibility="gone"/>
 
             </RelativeLayout>
 
@@ -185,7 +186,6 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:textSize="14sp"
-                    android:text="Liked by"
                     android:id="@+id/image_likes"/>
 
                 <TextView
