--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="No Internet Connection"
+            android:fontFamily="sans-serif-condensed"
             android:textSize="15sp"/>
         <ImageView
             android:id="@+id/nonetconimage"
@@ -29,11 +30,11 @@
             android:layout_height="50dp"
             android:layout_above="@+id/nonetcon"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/ic_no_wifi"
-            android:backgroundTint="@color/black"/>
+            android:background="@drawable/ic_nonet"
+            android:backgroundTint="@color/darkRed"/>
         <ProgressBar
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:indeterminateTint="@color/emercifycolor"
             android:id="@+id/progressBar"
             android:layout_centerInParent="true"/>
