--- a/app/src/main/res/layout/snippet_top_profile.xml
+++ b/app/src/main/res/layout/snippet_top_profile.xml
@@ -85,16 +85,17 @@
 
         <TextView
             android:id="@+id/textEditProfile"
-            android:layout_width="165dp"
-            android:layout_height="23dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:text="Edit your Profile"
             android:background="@drawable/rounded_border"
-            android:textAlignment="center"
-            android:gravity="center"
             android:textColor="@color/black"
             android:textSize="18sp"
+            android:padding="5dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
             android:fontFamily="sans-serif-condensed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
