--- a/app/src/main/res/layout/snippet_top_view_profilebar.xml
+++ b/app/src/main/res/layout/snippet_top_view_profilebar.xml
@@ -27,7 +27,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/backArrow"
-                    android:text="nicail.pepito"
+                    android:text="Profile Name"
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     android:layout_marginStart="15dp"
