--- a/app/src/main/res/layout/fragment_signout.xml
+++ b/app/src/main/res/layout/fragment_signout.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    
+    android:layout_width="250dp"
+    android:layout_height="wrap_content">
+
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/solidcolorrel2"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@color/pearl_white">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/emer" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/solidcolorrel2">
 
         <TextView
             android:layout_width="wrap_content"
@@ -15,37 +30,23 @@
             android:textSize="20sp"
             android:textColor="@color/black"
             android:id="@+id/tvConfirmSignout"
-            android:text="Are You Sure You Want To Sign Out?"/>
+            android:text="You are leaving Emercify!"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"/>
         
         <Button
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sign Out"
             android:layout_centerHorizontal="true"
-            android:textSize="20sp"
+            android:textSize="14sp"
             android:id="@+id/btnConfirmSignout"
             android:layout_below="@+id/tvConfirmSignout"
-            android:background="@drawable/white_rounded_button"
-            android:layout_marginTop="20dp"/>
+            android:background="@drawable/gradient_bg"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
 
     </RelativeLayout>
-    
-    <ProgressBar
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_centerInParent="true"
-        android:indeterminateTint="@color/emercifycolor"
-        android:layout_centerVertical="true"
-        android:id="@+id/progressBar"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Signing Out..."
-        android:textSize="12sp"
-        android:layout_centerVertical="true"
-        android:layout_alignRight="@+id/progressBar"
-        android:layout_alignLeft="@+id/progressBar"
-        android:gravity="center_horizontal"
-        android:id="@+id/tvSigningOut"/>
 
 </RelativeLayout>
