--- a/app/src/main/res/layout/layout_comment.xml
+++ b/app/src/main/res/layout/layout_comment.xml
@@ -13,15 +13,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/rellayout1"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:id="@+id/comment_profile_image"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                app:civ_border_width="2dp"/>
+                android:layout_marginLeft="10dp"/>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
