--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -1,57 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/white">
-            
+
             <RelativeLayout
+                android:id="@+id/rellayout1"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/rellayout1">
+                android:layout_height="50dp">
 
                 <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profile_photo"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    android:id="@+id/profile_photo"
-                    app:civ_border_color="@color/black"
-                    app:civ_border_width="0.5dp"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="15dp"
-                    android:layout_centerVertical="true"/>
+                    app:civ_border_color="@color/black"
+                    app:civ_border_width="0.5dp" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
-                    android:layout_toRightOf="@+id/profile_photo"
-                    android:layout_centerVertical="true">
+                    android:layout_toRightOf="@+id/profile_photo">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:text="Profile Name"
-                        android:textStyle="bold"
                         android:id="@+id/username"
-                        android:textColor="@color/black"/>
-
-                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        android:text="Location"
+                        android:text="Profile Name"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <TextView
                         android:id="@+id/address"
-                        android:layout_below="@+id/username"/>
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/username"
+                        android:text="Location"
+                        android:textSize="12sp" />
 
 
                 </RelativeLayout>
@@ -59,9 +60,9 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/squarerel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/squarerel"
                 android:layout_below="@+id/rellayout1">
 
                 <nicail.bscs.com.emercify.Utils.SquareImageView
@@ -74,154 +75,156 @@
                     android:id="@+id/emergency_icon"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:foregroundGravity="center"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
+                    android:layout_marginTop="10dp"
+                    android:foregroundGravity="center"
                     android:src="@mipmap/emergency_icon"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
                 android:id="@+id/rellayout2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/squarerel"
-                android:background="@color/white">
-                
+                android:background="@color/white"
+                android:padding="10dp">
+
                 <RelativeLayout
+                    android:id="@+id/heart_layout"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@color/white"
-                    android:id="@+id/heart_layout">
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:background="@color/white">
 
                     <ImageView
+                        android:id="@+id/image_heart_red"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:id="@+id/image_heart_red"
                         android:layout_centerInParent="true"
                         android:layout_marginLeft="20dp"
                         android:src="@drawable/ic_heart_red"
-                        android:visibility="invisible"/>
+                        android:visibility="invisible" />
 
                     <ImageView
+                        android:id="@+id/image_heart"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:id="@+id/image_heart"
                         android:layout_centerInParent="true"
                         android:layout_marginLeft="20dp"
                         android:src="@drawable/ic_heart_white"
-                        android:visibility="visible"/>
+                        android:visibility="visible" />
 
                 </RelativeLayout>
 
                 <ImageView
+                    android:id="@+id/speech_bubble"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:id="@+id/speech_bubble"
+                    android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/heart_layout"
                     android:src="@drawable/ic_speech_bubble"
-                    android:layout_centerVertical="true"
-                    android:visibility="visible"/>
+                    android:visibility="visible" />
 
                 <Button
                     android:id="@+id/respondButton"
+                    style="@style/com_facebook_button"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:text="RESPOND"
-                    android:textSize="18sp"
-                    android:background="@drawable/rounded_border_blue"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:gravity="center"
-                    style="@style/com_facebook_button"
                     android:layout_marginRight="10dp"
-                    android:visibility="gone"/>
+                    android:background="@drawable/rounded_border_blue"
+                    android:fontFamily="sans-serif-condensed"
+                    android:gravity="center"
+                    android:text="RESPOND"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:visibility="gone" />
 
                 <Button
                     android:id="@+id/fakeButton"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:text="FAKE"
-                    android:textSize="18sp"
-                    android:background="@drawable/rounded_border_blue"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:gravity="center"
-                    style="@style/com_facebook_button"
                     android:layout_marginRight="10dp"
-                    android:visibility="gone"/>
+                    android:background="@drawable/unfollow_button"
+                    android:fontFamily="sans-serif-condensed"
+                    android:text="FAKE"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:visibility="gone" />
 
                 <Button
                     android:id="@+id/legitButton"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:text="LEGIT"
-                    android:textSize="18sp"
-                    android:background="@drawable/rounded_border_blue"
-                    android:layout_toLeftOf="@+id/fakeButton"
                     android:layout_centerVertical="true"
-                    android:gravity="center"
-                    style="@style/com_facebook_button"
                     android:layout_marginRight="10dp"
-                    android:visibility="gone"/>
+                    android:layout_toLeftOf="@+id/fakeButton"
+                    android:background="@drawable/verify_button"
+                    android:fontFamily="sans-serif-condensed"
+                    android:text="VERIFY"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:visibility="gone" />
 
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/rellayout3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/rellayout2"
-                android:id="@+id/rellayout3"
-                android:background="@color/white"
+                android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp">
+                android:background="@color/white">
 
                 <TextView
+                    android:id="@+id/image_likes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Liked By"
                     android:textColor="@color/black"
-                    android:textSize="14sp"
-                    android:id="@+id/image_likes"/>
+                    android:textSize="14sp" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:text="Caption"
                     android:id="@+id/image_caption"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/image_likes"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_marginTop="5dp"
+                    android:text="Caption"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
 
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/grey"
-                    android:textSize="14sp"
-                    android:text="Comments"
                     android:id="@+id/image_comments_Link"
-                    android:layout_below="@+id/image_caption"
-                    android:layout_marginTop="10dp"/>
-
-                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/image_caption"
+                    android:layout_marginTop="5dp"
+                    android:text="Comments"
                     android:textColor="@color/grey"
-                    android:textSize="14sp"
-                    android:text="Time Posted"
+                    android:textSize="14sp" />
+
+                <TextView
                     android:id="@+id/image_time_posted"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/image_comments_Link"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_marginTop="5dp"
+                    android:text="Time Posted"
+                    android:textColor="@color/grey"
+                    android:textSize="14sp" />
 
             </RelativeLayout>
-            
+
         </RelativeLayout>
 
     </ScrollView>
