--- a/app/src/main/res/layout/snippet_top_editprofiletoolbar.xml
+++ b/app/src/main/res/layout/snippet_top_editprofiletoolbar.xml
@@ -35,13 +35,13 @@
                     android:id="@+id/profileName"/>
 
                 <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="20dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/saveChanges"
-                    android:src="@drawable/ic_checkmark"
+                    android:src="@drawable/ic_blue_check"
                     android:layout_alignParentRight="true"/>
 
             </RelativeLayout>
