--- a/app/src/main/res/layout/snippet_top_view_profile.xml
+++ b/app/src/main/res/layout/snippet_top_view_profile.xml
@@ -82,16 +82,18 @@
 
         <TextView
             android:id="@+id/unfollow"
-            android:layout_width="165dp"
-            android:layout_height="22dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/unfollow_button"
             android:text="Unfollow"
             android:textAlignment="center"
-            android:gravity="center"
             android:textColor="@color/white"
             android:textSize="18sp"
+            android:padding="5dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -101,34 +103,40 @@
 
         <TextView
             android:id="@+id/follow"
-            android:layout_width="165dp"
-            android:layout_height="22dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/follow_button"
             android:text="Follow"
             android:textAlignment="center"
-            android:gravity="center"
             android:textColor="@color/white"
             android:textSize="18sp"
+            android:padding="5dp"
+            android:paddingStart="32dp"
+            android:paddingEnd="32dp"
             android:fontFamily="sans-serif-condensed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textFollowers"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            android:visibility="visible"/>
 
         <TextView
             android:id="@+id/textEditProfile"
-            android:layout_width="165dp"
-            android:layout_height="22dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/grey_border"
+            android:background="@drawable/rounded_border"
             android:text="Edit your Profile"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textSize="18sp"
+            android:padding="5dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
