--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="emercifycolor">#55bdca</color>
     <color name="light_grey">#EAECEE</color>
     <color name ="notseen">#ecf7f9</color>
+    <color name ="green">#00b300</color>
     <color name ="comment_box_color">#f2f2f2</color>
 </resources>
