--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -35,7 +35,7 @@
         <ProgressBar
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:indeterminateTint="@color/emercifycolor"
+            android:indeterminateTint="@color/black"
             android:id="@+id/progressBar"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
