--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -102,7 +102,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:id="@+id/progressBar"
-        android:indeterminateTint="@color/emercifycolor"
+        android:indeterminateTint="@color/black"
         android:layout_centerInParent="true"/>
 
     <TextView
