--- a/app/src/main/res/layout/activity_notifs.xml
+++ b/app/src/main/res/layout/activity_notifs.xml
@@ -25,7 +25,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:id="@+id/progress_Barnotif"
-                android:indeterminateTint="@color/emercifycolor"
+                android:indeterminateTint="@color/black"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="10dp"/>
