--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:id="@+id/progress_Bar1"
-            android:indeterminateTint="@color/emercifycolor"
+            android:indeterminateTint="@color/black"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginTop="10dp"/>
