--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -50,7 +50,7 @@
         <ProgressBar
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:indeterminateTint="@color/emercifycolor"
+            android:indeterminateTint="@color/black"
             android:id="@+id/profileProgressBar"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
