--- a/app/src/main/res/layout/fragment_view_comments.xml
+++ b/app/src/main/res/layout/fragment_view_comments.xml
@@ -52,16 +52,16 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:id="@+id/rellayout3"
         android:layout_alignParentBottom="true"
         android:background="@drawable/white_gray_border_top">
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:padding="2dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
             android:layout_centerVertical="true"
             android:hint="Add a comment..."
@@ -69,6 +69,7 @@
             android:paddingStart="8dp"
             android:textSize="16sp"
             android:id="@+id/comment"
+            android:layout_toLeftOf="@+id/ivPostComment"
             android:background="@drawable/white_rounded_border"/>
 
         <ImageView
